0.584   2012-10-09
        - migrated to dist-zilla
0.583   2012-03-10
        - fixed sorting of level 2 fields
        - renamed all_fields to fields in PICA::Record
        - renamed (to|as)_string to string
0.582   2012-02-02
        - fix in winibw2pica
0.581   2012-01-09
        - migrated from XML::Parser to XML::SAX and improved SRU
0.56    2011-11-02
        - fixed some unit tests
0.55    2010-03-23
        - improved methods 'field' (Record) and 'update' (Record and Field)
        - PICA::Record is now subclassable
        - started to add statistic function to PICA::Writer and 'parsepica'
        - fixed unAPI
0.54    2010-02-10
        - added the useful functions pgrep and pmap
        - removed deprecated methods (copy_record, local_records, replace)
        - added parameter 'config' and 'auto' in parsepica
        - added iktLink and ppnLink for PSI sources
        - empty fields are allowed now
        - fixed sorting of fields and subfields
0.53    2009-12-09
        - minor additions to XMLParser and readpicarecord
        - extended winibw2pica to correctly read WinIBW3 "utf8"
        - added PICA::Source->iktQuery for PSI
0.52    2009-10-02
        - PICA::Record fixes and additions (replace, update, read, write, iln)
        - minor updates in picaimport and PICA::Writer
0.511   2009-08-18
        - fixed make (winibw2pica was missing)
        - removed some deprecated methods
0.51    2009-08-17   
        - added winibw2pica
        - filter functions are also allowed in Record->field
        - added some operator overloading and removed deprecated methods
        - minor fixes in PICA::PlainParser
        - fixed UTF-8 when reading via PSI-XML
0.502   2009-08-05
        - minor fixes to reduce the number of failing tests
0.50    2009-07-28
        - rewrote picaimport to replace picawebcat, removed Filemap
        - added getrecord method to parse one single record from file
        - clarified utf8 encoding/decoding and other encodings