@@ -10,6 +10,8 @@ copyright_year   = 2012
 [PodWeaver]
 
 [AutoPrereqs]
+skip = ^ZOOM
+skip = ^Test::Distribution
 
 [PruneFiles]
 filename = dist.ini 
