@@ -1,5 +1,6 @@
 0.584   2012-10-09
         - migrated to dist-zilla
+        - removed deprecated methods
 0.583   2012-03-10
         - fixed sorting of level 2 fields
         - renamed all_fields to fields in PICA::Record
